--- a/backup.html
+++ b/backup.html
@@ -51,44 +51,44 @@
     <div id="homePageDiv">
       <h1 id="hello"></h1>
       <h3 id="date"></h3>
-      <p style="font-weight: 900; font-size: 12px; margin-bottom: 4px; color: #2d2e38;">LISTS</p>
+      <p style="font-weight: 900; font-size: 12px; margin-bottom: 4px;">LISTS</p>
       <div id="homepageBtns"></div>
     </div>
 
     <!-- settings -->
     <div id="settings">
       <h1>App Settings</h1>
-      <div>
-        <!-- always on top -->
-        <div class='settingsDiv'>
-          <h3 style=" display: inline-block;">Always on top</h3>
-          <label class="switch">
-            <input id='alwaysOnTopCheckbox' type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          <p>Have the Lister app above all other applications.</p>
+      <div style="display: flex; width: 100%;">
+        <!-- column 1 -->
+        <div style="width: 100%; margin-right: 8px;">
+          <div class='settingsDiv'>
+            <h3 style=" display: inline-block;">Always on top</h3>
+            <label class="switch">
+              <input id='alwaysOnTopCheckbox' type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <p>Have the Lister app above all other applications.</p>
+          </div>
+          <div class='settingsDiv'>
+            <h3>Open Resources Folder</h3>
+            <button id="openResourcesFolderBtn"></button>
+            <p>Manually edit media file storage, lists, settings, and more from the files in this folder.</p>
+          </div>
         </div>
 
-        <!-- b&w tray icon -->
-        <div class='settingsDiv'>
-          <h3 style=" display: inline-block;">Black and white tray icon</h3>
-          <label class="switch">
-            <input id='bwtrayiconCheckbox' type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          <p>Make the app icon in the tray black and white.</p>
-        </div>
-
-        <!-- open resources folder -->
-        <div class='settingsDiv'>
-          <h3>Open Resources Folder</h3>
-          <button id="openResourcesFolderBtn"></button>
-          <p>Manually edit media file storage, lists, settings, and more from the files in this folder.</p>
+        <!-- column 2 -->
+        <div style="width: 100%">
+          <div class='settingsDiv'>
+            <h3 style=" display: inline-block;">Black and white tray icon</h3>
+            <label class="switch">
+              <input id='bwtrayiconCheckbox' type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <p>Make the app icon in the tray black and white.</p>
+          </div>
         </div>
       </div>
       <h1>Locked Lists</h1>
-
-      <!-- password -->
       <div class="settingsDiv">
         <h3>Password:</h3>
         <input type="text" id="password">
