--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <button id="settingsBtn" class="sideListBtn">Settings</button>
       </div>
 
-      <p style="font-weight: 900;">LISTS</p>
+      <p>LISTS</p>
       <div id="listBtns"></div>
 
       <div style="text-align: center; margin-top: 32px;">
