--- a/src/index 2.html
+++ b/src/index 2.html
@@ -51,7 +51,7 @@
     <div id="homePageDiv">
       <h1 id="hello"></h1>
       <h3 id="date"></h3>
-      <p style="font-weight: 900; font-size: 12px; margin-bottom: 4px;">LISTS</p>
+      <p style="font-weight: 900; font-size: 12px; margin-bottom: 4px;" id="listsTitle"></p>
       <div id="homepageBtns"></div>
     </div>
 
@@ -73,6 +73,7 @@
             <h3>Open Resources Folder</h3>
             <button id="openResourcesFolderBtn"></button>
             <p>Manually edit media file storage, lists, settings, and more from the files in this folder.</p>
+            <p style="margin-top: 8px">Do not edit them if you don't know what you're doing.</p>
           </div>
         </div>
 
