--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
 
       <div style="text-align: center; margin-top: 32px;">
         <select id="listType">
-          <option value="default">default</option>
           <option value="block">block</option>
+          <option value="text">text</option>
         </select>
         <button id="newListBtn">+</button>
       </div>
