--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 
   <div id="lists"></div>
 
-  <!-- You can also require other files to run in this process -->
-  <script src="renderer.js"></script>
+  <script type="module" src="renderer.js"></script>
 </body>
 
 </html>
