--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,13 @@
       <!-- settings button -->
       <button id="settingsBtn" class="sideListBtn">Settings</button>
 
-      <p>LISTS</p>
+      <p style="font-weight: bold;
+      color: #404351;
+      margin-bottom: 2px;
+      user-select: none;
+      margin-top: 12px;
+      margin-left: 8px;
+      font-size: 12px;">LISTS</p>
       <!-- main list buttons -->
       <div id="listBtns"></div>
 
@@ -37,6 +43,8 @@
     <!-- menu bar -->
     <div id="menuBar">
       <button id="closeBtn"></button>
+      <button id="fullscreenBtn"></button>
+      <button id="maximizeBtn"></button>
       <button id="minimizeBtn"></button>
     </div>
     <br>
@@ -45,7 +53,7 @@
     <div id="content">
       <!-- no list selected -->
       <div id="noListSelected">
-        <p>No List Selected</p>
+        <p>No List Selected.</p>
       </div>
       <!-- settings -->
       <div id="settings">
