6/24 morning - collapse sidebar, minor fixes

--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,15 @@
           <option value="text">text</option>
         </select>
         <button id="newListBtn">+</button>
+      <button id="hideSideBtn"></button>
       </div>
+
     </div>
 
     <!-- menu bar -->
     <div id="menuBar">
+      <button id="showSideBtn" style="display: none;"></button>
       <button id="closeBtn"></button>
-      <button id="fullscreenBtn"></button>
-      <button id="maximizeBtn"></button>
       <button id="minimizeBtn"></button>
     </div>
     <br>
