6/25 evening - added checklist list type

--- a/src/index.html
+++ b/src/index.html
@@ -35,16 +35,16 @@
         <select id="listType">
           <option value="block">block</option>
           <option value="text">text</option>
+          <option value="checklist">checklist</option>
         </select>
         <button id="newListBtn">+</button>
-      <button id="hideSideBtn"></button>
       </div>
 
     </div>
 
     <!-- menu bar -->
     <div id="menuBar">
-      <button id="showSideBtn" style="display: none;"></button>
+      <button id="toggleSideBtn"></button>
       <button id="closeBtn"></button>
       <button id="minimizeBtn"></button>
     </div>
