6/25n night - styling changes & minor fixes

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               <input id='alwaysOnTopCheckbox' type="checkbox">
               <span class="slider round"></span>
             </label>
-            <p>Have the Lister app above all other applications.</p>
+            <p>Forces the Lister to be above all other applications</p>
           </div>
 
           <!-- b&w tray icon -->
@@ -77,7 +77,7 @@
               <input id='bwtrayiconCheckbox' type="checkbox">
               <span class="slider round"></span>
             </label>
-            <p>Make the app icon in the tray black and white.</p>
+            <p>Makes the tray icon black and white</p>
           </div>
 
           <!-- open resources folder -->
