6/26 night - maximize button & cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <div id="menuBar">
       <button id="toggleSideBtn"></button>
       <button id="closeBtn"></button>
+      <button id="maximizeBtn" class="true"></button>
       <button id="minimizeBtn"></button>
     </div>
     <br>
