202207051557 - account types & icons

--- a/src/index.html
+++ b/src/index.html
@@ -125,11 +125,9 @@
         <!-- password -->
         <div class="settingsDiv">
           <h3>Password:</h3>
-          <input type="text" id="password">
+          <input type="text" id="password" class="blur">
         </div>
         <h1>APP INFO</h1>
-        <!-- password -->
-        <!-- spellcheck -->
         <div class='settingsDiv'>
           <h3 style=" display: inline-block;">Reset Settings</h3>
           <button class="btn fatal" id="resetSettingsBtn">Reset</button>
@@ -139,7 +137,11 @@
           <h3>Source Code</h3>
           <p><a href="https://github.com/devinmd/Lister" target="_blank">https://github.com/devinmd/Lister</a></p>
         </div>
+        <div class="settingsDiv" id="appinfo">
+          <h3>Versions</h3>
+        </div>
       </div>
+
       <div id="lists"></div>
     </div>
 
