--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,15 @@
           </label>
           <p>Makes the tray icon black and white</p>
         </div>
+        <!-- spellcheck -->
+        <div class='settingsDiv'>
+          <h3 style=" display: inline-block;">Spellcheck</h3>
+          <label class="switch">
+            <input id='spellcheckToggle' type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <p>Highlights misspelled words</p>
+        </div>
 
         <!-- open resources folder -->
         <div class='settingsDiv'>
