202207051236 - mac touch id support

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,7 @@
           <p>Underlines misspelled words</p>
         </div>
 
+
         <!-- open resources folder -->
         <div class='settingsDiv'>
           <h3>Open Resources Folder</h3>
@@ -151,6 +152,7 @@
   </div>
 
   <!-- source code -->
+  <script src="receiver.js"></script>
   <script src="helper.js"></script>
   <script src="renderer.js"></script>
 </body>
