7/3 - account list type

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="style.css">
   <title>Lister</title>
 </head>
@@ -36,6 +37,8 @@
           <option value="block">block</option>
           <option value="text">text</option>
           <option value="checklist">checklist</option>
+          <option value="accounts">accounts</option>
+
         </select>
         <button id="newListBtn">+</button>
       </div>
