--- a/src/index.html
+++ b/src/index.html
@@ -99,14 +99,14 @@
           <button id="openResourcesFolderBtn"></button>
           <p>Manually edit media file storage, lists, settings, and more, from the files in this folder.</p>
         </div>
-        <h1>BLOCK LISTS</h1>
+        <h1>BLOCK LIST</h1>
         <!-- media width -->
         <div class="settingsDiv">
           <h3 id="mediaWidthTitle">Media Width</h3>
           <input style="float: right" type="range" max="10" min="1" value="5" id="blockListItemMediaWidth" />
           <p>Width of item media by % of item width, height is automatic.</p>
         </div>
-        <h1>CHECKLISTS</h1>
+        <h1>CHECKLIST</h1>
         <!-- strikethrough completed items -->
         <div class="settingsDiv">
           <h3 id="mediaWidthTitle">Checked Item Style</h3>
@@ -132,7 +132,7 @@
         <div class='settingsDiv'>
           <h3 style=" display: inline-block;">Reset Settings</h3>
           <button class="btn fatal" id="resetSettingsBtn">Reset</button>
-          <p>Resets all settings to the default</p>
+          <p>Reset all settings to the default.</p>
         </div>
         <div class="settingsDiv">
           <h3>Source Code</h3>
