--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,16 @@
       <button id="settingsBtn" class="sideListBtn">Settings</button>
 
       <p style="font-weight: bold;
-      color: #404351;
-      margin-bottom: 2px;
-      user-select: none;
-      margin-top: 12px;
-      margin-left: 8px;
-      font-size: 12px;">LISTS</p>
+        color: #404351;
+        user-select: none;
+        margin: 12px 0 0 8px;
+        transform: translateY(2px);
+        display: inline-block;
+        font-size: 12px;">LISTS</p>
+
+      <button id="exitSearch" style="display: none;"></button>
+      <input placeholder="Search..." id="listsSearch">
+
       <!-- main list buttons -->
       <div id="listBtns"></div>
 
