--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
         <!-- strikethrough completed items -->
         <div class="settingsDiv">
           <h3 id="mediaWidthTitle">Checked Item Style</h3>
-          <div class="btn checkedItemStyleBtn">
+          <div class="btn checkedItemStyleBtn border-green">
             <button class="checkBoxBtn true"></button>
             <p style="font-size: 16px;cursor: default; user-select: none; margin: 0;display: inline-block;color: #393c4c;  text-decoration: line-through;">Strikethrough</p>
           </div>
@@ -134,7 +134,7 @@
         <h1>APP INFO</h1>
         <div class='settingsDiv'>
           <h3 style=" display: inline-block;">Reset Settings</h3>
-          <button class="btn fatal" id="resetSettingsBtn">Reset</button>
+          <button class="btn fatal color-red border-red" id="resetSettingsBtn">Reset</button>
           <p>Reset all settings to the default.</p>
         </div>
         <div class="settingsDiv">
