--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="sidenav.css">
   <title>Lister</title>
 </head>
 
@@ -16,39 +17,6 @@
     <!-- alerts -->
     <div id="info"></div>
 
-    <!-- side bar -->
-    <div id="side">
-      <!-- settings button -->
-      <button id="settingsBtn" class="sideListBtn">Settings</button>
-
-      <p style="font-weight: bold;
-        color: #404351;
-        user-select: none;
-        margin: 12px 0 0 8px;
-        transform: translateY(2px);
-        display: inline-block;
-        font-size: 12px;">LISTS</p>
-
-      <button id="exitSearch" style="display: none;"></button>
-      <input placeholder="Search..." id="listsSearch">
-
-      <!-- main list buttons -->
-      <div id="listBtns"></div>
-
-      <!-- new list button & selector -->
-      <div style="text-align: center; margin-top: 32px;">
-        <select id="listType">
-          <option value="block">block</option>
-          <option value="text">text</option>
-          <option value="checklist">checklist</option>
-          <option value="accounts">accounts</option>
-
-        </select>
-        <button id="newListBtn">+</button>
-      </div>
-
-    </div>
-
     <!-- menu bar -->
     <div id="menuBar">
       <button id="toggleSideBtn"></button>
@@ -57,6 +25,33 @@
       <button id="minimizeBtn"></button>
     </div>
     <br>
+
+    <!-- side bar -->
+    <div id="sidenav">
+
+
+      <p class="header">LISTS</p>
+
+      <!-- main list buttons -->
+      <div id="listBtns"></div>
+
+      <div id="otherBtns">
+        <!-- settings button -->
+        <button id="settingsBtn" class="sidenavBtn">Settings</button>
+        <button id="newListBtn" class="sidenavBtnNOPAGE">New List</button>
+        <!-- new list button & selector -->
+        <select id="listType">
+          <option value="block">block</option>
+          <option value="text">text</option>
+          <option value="checklist">checklist</option>
+          <option value="accounts">accounts</option>
+        </select>
+      </div>
+
+    </div>
+
+
+
 
     <!-- main content -->
     <div id="content">
@@ -146,18 +141,16 @@
         </div>
       </div>
 
+      <!-- inject lists -->
       <div id="lists"></div>
     </div>
 
+    <!-- footer -->
+    <div id="footer">Lister v0.0.0</div>
 
   </div>
 
-  <!-- lists -->
-  </div>
-
-  </div>
-
-  <!-- source code -->
+  <!-- javascript -->
   <script src="receiver.js"></script>
   <script src="helper.js"></script>
   <script src="renderer.js"></script>
