--- a/src/index.html
+++ b/src/index.html
@@ -90,14 +90,22 @@
           </label>
           <p>Underlines misspelled words</p>
         </div>
-
-
+        <!-- 24 hr time -->
+        <div class='settingsDiv'>
+          <h3 style=" display: inline-block;">24 Hour Time</h3>
+          <label class="switch">
+            <input id='24hrtimeToggle' type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <p>Use 24 hour time format.</p>
+        </div>
         <!-- open resources folder -->
         <div class='settingsDiv'>
           <h3>Open Resources Folder</h3>
           <button id="openResourcesFolderBtn"></button>
           <p>Manually edit media file storage, lists, settings, and more, from the files in this folder.</p>
         </div>
+
         <h1>BLOCK LIST</h1>
         <!-- media width -->
         <div class="settingsDiv">
