--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="sidenav.css">
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/sidenav.css">
   <title>Lister</title>
 </head>
 
