--- a/src/index.html
+++ b/src/index.html
@@ -21,22 +21,20 @@
     <div id="menuBar">
       <button id="toggleSideBtn"></button>
       <button id="closeBtn"></button>
-      <button id="maximizeBtn" class="true"></button>
       <button id="minimizeBtn"></button>
     </div>
     <br>
 
     <!-- side bar -->
     <div id="sidenav">
-
+      <button id="settingsBtn">Settings</button>
+      <input id="search" placeholder="Search..." type="text">
       <p class="header">LISTS</p>
 
       <!-- main list buttons -->
       <div id="listBtns"></div>
 
-      <div id="otherBtns">
         <!-- settings button -->
-        <button id="settingsBtn" class="sidenavBtn">Settings</button>
         <button id="newListBtn" class="sidenavBtnNOPAGE">New List</button>
         <!-- new list button & selector -->
         <select id="listType">
@@ -45,7 +43,6 @@
           <option value="checklist">checklist</option>
           <option value="accounts">accounts</option>
         </select>
-      </div>
 
     </div>
 
