last edited, file path, moved buttons

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,19 @@
 
     <!-- menu bar -->
     <div id="menubar">
-      <div>
-        <button id="closebtn">x</button>
-        <button id="minimizebtn">-</button>
+
+      <!-- data injected here -->
+      <div id="path"></div>
+      <div id="lastedited"></div>
+      <div id="actions"></div>
+
+      <!-- buttons for closing & minimizing -->
+      <div id="osbtns">
+        <button id="minimizebtn"></button>
+        <button id="closebtn"></button>
       </div>
 
-      <!-- buttons injected here -->
-      <div id="fileactions"></div>
+
     </div>
 
     <!-- side bar -->
