--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,14 @@
 <body>
   <div id="app">
 
+    <!-- sidenav -->
+    <div id="sidenav">
+      <p class="header">FILES</p>
+
+      <!-- inject file buttons here -->
+      <div id="filebtns"></div>
+    </div>
+
     <!-- menu bar -->
     <div id="menubar">
 
@@ -39,18 +47,10 @@
 
     </div>
 
-    <!-- side bar -->
-    <div id="sidenav">
-      <p class="header">FILES</p>
-
-      <!-- inject file buttons here -->
-      <div id="filebtns"></div>
-    </div>
-
     <!-- main content -->
     <div id="content">
       <!-- inject active file here from js -->
-      <div id="activefile"></div>
+      <div id="filecontainer"></div>
     </div>
 
 
