--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,13 @@
 <body>
   <div id="app">
 
+    <div id="blockmenu">
+      <p class="header">BLOCK ACTIONS</p>
+      <button id="deleteblockbtn" style="background-image: url('../assets/icons/trash.svg')">Delete</button>
+      <p class="header" style="margin-top:4px">INSERT ABOVE</p>
+      <div id="newblockbtns"></div>
+    </div>
+
     <!-- sidenav -->
     <div id="sidenav">
       <p class="header">FILES</p>
