--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,18 @@
 <body>
   <div id="app">
 
+    <!-- block menu -->
     <div id="blockmenu">
       <p class="header">BLOCK ACTIONS</p>
-      <button id="deleteblockbtn" style="background-image: url('../assets/icons/trash.svg')">Delete</button>
+      <button id="deleteblockbtn" style="background-image: url('../assets/icons/trash_4.svg')">Delete</button>
       <p class="header" style="margin-top:4px">INSERT ABOVE</p>
       <div id="newblockbtns"></div>
+    </div>
+
+    <!-- tooltip -->
+    <div id="tooltip">
+        <p id="text"></p>
+        <p id="shortcut"></p>
     </div>
 
     <!-- sidenav -->
