--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
       <button id="deleteblockbtn" style="background-image: url('../assets/icons/trash_4.svg')">Delete</button>
       <p class="header" style="margin-top:4px">INSERT ABOVE</p>
       <div id="newblockbtns"></div>
+      <p class="header inline-blocks" style="margin-top:4px; display: none;">INLINE BLOCKS</p>
+      <div id="newinlineblockbtns"></div>
+
     </div>
 
     <!-- tooltip -->
