--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,11 @@
     <!-- sidenav -->
     <div id="sidenav">
       <button id="settingsbtn">Settings</button>
-      <p class="header">FILES</p>
+      <div>
+        <p class="header">FILES</p>
+        <button id="newrootfile" onclick="newFile(files)"></button>
+      </div>
+
       <!-- inject file buttons here -->
       <div id="filebtns"></div>
     </div>
