minor bug fixes

--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
       <!-- buttons on the right side -->
         <!-- buttons for closing & minimizing on windows -->
         <div id="winbtns">
-          <button id="minimizebtn" style="background-image: url(' ../assets/icons/navbars/minimize.svg');"></button>
-          <button id="closebtn" style="background-image: url(' ../assets/icons/navbars/x.svg');"></button>
+          <button id="minimizebtn" style="background-image: url(' ../assets/icons/menubar/minimize.svg');"></button>
+          <button id="closebtn" style="background-image: url(' ../assets/icons/menubar/x.svg');"></button>
       </div>
     </div>
 
